--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,11 +15,35 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#999999"/>
-    <Button
-        android:id="@+id/btn_px"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn_px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="像素"
+            android:textSize="18sp"/>
+        <Button
+            android:id="@+id/btn_color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="颜色"
+            android:textSize="18sp"/>
+        <Button
+            android:id="@+id/btn_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="view"
+            android:textSize="18sp"
+            android:textAllCaps="false"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="像素"
-        android:textSize="18sp"/>
+        android:orientation="horizontal">
+    </LinearLayout>
 
 </LinearLayout>
