--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,17 +33,36 @@
             android:text="颜色"
             android:textSize="18sp"/>
         <Button
-            android:id="@+id/btn_view"
+            android:id="@+id/btn_pmd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="view"
+            android:text="跑马灯"
+            android:textSize="18sp"
+            android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_lts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="聊天室"
             android:textSize="18sp"
             android:textAllCaps="false"/>
     </LinearLayout>
+    <TextView
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="第二章中级控件"
+        android:textSize="20sp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="spinner"
+            android:textAllCaps="false"/>
     </LinearLayout>
 
 </LinearLayout>
