--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,10 @@
         android:layout_height="wrap_content"
         android:text="第二章中级控件"
         android:textSize="20sp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#999999"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
