--- a/app/src/main/res/layout/activity_viewpage.xml
+++ b/app/src/main/res/layout/activity_viewpage.xml
@@ -7,5 +7,10 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pts_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </android.support.v4.view.ViewPager>
 </LinearLayout>
