--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,12 @@
             android:layout_height="wrap_content"
             android:text="启动页"
             android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_rcb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="日程表"
+            android:textAllCaps="false"/>
     </LinearLayout>
 
 </LinearLayout>
